# nordly

./: .gitignore  AGENTS.md  LICENSE  README.md  go.work
.cursor/rules/: agents-md.mdc  architecture-standard.mdc  fail-fast-no-fallbacks.mdc  git-commits.mdc  go-backend.mdc  project-overview.mdc  service-registry.mdc
.github/workflows/: ci.yml  deploy.yml  nordly-release.yml
apps/nordly/: .env  .env.example  .gitignore  AGENTS.md  README.md  SIGNING.md  eslint.config.js  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/nordly/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
apps/nordly/src-tauri/.cargo/: config.toml
apps/nordly/src-tauri/capabilities/: default.json  notification.json  tray.json
apps/nordly/src-tauri/icons/: icon.icns
apps/nordly/src-tauri/permissions/: nordly-commands.toml
apps/nordly/src-tauri/src/: auth.rs  aux_windows.rs  eventkit.rs  global_shortcut.rs  lib.rs  main.rs  notification.rs  quick_capture.rs  store.rs  tray.rs  vault.rs  window_macos.rs
apps/web/: .env.example  AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
deploy/: .env.example  Caddyfile  Dockerfile  Makefile  PRODUCTION_CHECKLIST.md  RUNBOOK.md  docker-compose.migrate-volumes.yml  docker-compose.prod.yml  nginx-druz9.conf.example  nginx-trynordly.conf.example  prometheus-alerts.yml
docs/: backend-audit.md  backend-client-matrix.md  billing-features.md  billing-plans.md  release-process.md
(+968 files in other folders)
